@@ -18,7 +18,10 @@ package com.echothree.control.user.accounting.server.command;
 
 import com.echothree.control.user.accounting.common.form.CreateGlAccountTypeDescriptionForm;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
+import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.accounting.server.entity.GlAccountType;
 import com.echothree.model.data.accounting.server.entity.GlAccountTypeDescription;
 import com.echothree.model.data.party.server.entity.Language;
@@ -28,6 +31,9 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
 import java.util.Collections;
@@ -35,35 +41,43 @@ import java.util.List;
 
 public class CreateGlAccountTypeDescriptionCommand
         extends BaseSimpleCommand<CreateGlAccountTypeDescriptionForm> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("GlAccountTypeName", FieldType.ENTITY_NAME, true, null, null),
-            new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, true, null, null),
-            new FieldDefinition("Description", FieldType.STRING, true, 1L, 132L)
-        ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                        new SecurityRoleDefinition(SecurityRoleGroups.GlAccountType.name(), SecurityRoles.Description.name())
+                )))
+        )));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("GlAccountTypeName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("LanguageIsoName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("Description", FieldType.STRING, true, 1L, 132L)
+        );
     }
     
     /** Creates a new instance of CreateGlAccountTypeDescriptionCommand */
     public CreateGlAccountTypeDescriptionCommand(UserVisitPK userVisitPK, CreateGlAccountTypeDescriptionForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, false);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
     @Override
     protected BaseResult execute() {
         var accountingControl = Session.getModelController(AccountingControl.class);
-        String glAccountTypeName = form.getGlAccountTypeName();
-        GlAccountType glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
+        var glAccountTypeName = form.getGlAccountTypeName();
+        var glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
         
         if(glAccountType != null) {
             var partyControl = Session.getModelController(PartyControl.class);
-            String languageIsoName = form.getLanguageIsoName();
-            Language language = partyControl.getLanguageByIsoName(languageIsoName);
+            var languageIsoName = form.getLanguageIsoName();
+            var language = partyControl.getLanguageByIsoName(languageIsoName);
             
             if(language != null) {
-                GlAccountTypeDescription glAccountTypeDescription = accountingControl.getGlAccountTypeDescription(glAccountType, language);
+                var glAccountTypeDescription = accountingControl.getGlAccountTypeDescription(glAccountType, language);
                 
                 if(glAccountTypeDescription == null) {
                     var description = form.getDescription();
