@@ -20,6 +20,9 @@ import com.echothree.control.user.accounting.common.form.GetGlAccountTypeForm;
 import com.echothree.control.user.accounting.common.result.AccountingResultFactory;
 import com.echothree.control.user.accounting.common.result.GetGlAccountTypeResult;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.accounting.server.entity.GlAccountType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.message.ExecutionErrors;
@@ -27,6 +30,9 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
 import java.util.Arrays;
 import java.util.Collections;
@@ -34,26 +40,34 @@ import java.util.List;
 
 public class GetGlAccountTypeCommand
         extends BaseSimpleCommand<GetGlAccountTypeForm> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("GlAccountTypeName", FieldType.ENTITY_NAME, false, null, null)
-        ));
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                        new SecurityRoleDefinition(SecurityRoleGroups.GlAccountType.name(), SecurityRoles.Review.name())
+                )))
+        )));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("GlAccountTypeName", FieldType.ENTITY_NAME, false, null, null)
+        );
     }
     
     /** Creates a new instance of GetGlAccountTypeCommand */
     public GetGlAccountTypeCommand(UserVisitPK userVisitPK, GetGlAccountTypeForm form) {
-        super(userVisitPK, form, null, FORM_FIELD_DEFINITIONS, true);
+        super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
     
     @Override
     protected BaseResult execute() {
         var accountingControl = Session.getModelController(AccountingControl.class);
-        GetGlAccountTypeResult result = AccountingResultFactory.getGetGlAccountTypeResult();
-        String glAccountTypeName = form.getGlAccountTypeName();
-        GlAccountType glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
+        var result = AccountingResultFactory.getGetGlAccountTypeResult();
+        var glAccountTypeName = form.getGlAccountTypeName();
+        var glAccountType = accountingControl.getGlAccountTypeByName(glAccountTypeName);
         
         if(glAccountType != null) {
             result.setGlAccountType(accountingControl.getGlAccountTypeTransfer(getUserVisit(), glAccountType));
